cruzy-demo/force-app/main/default/objects/Membership_Payment__c/Membership_Payment__c.object-meta.xml
<CustomObject>
    <description>Payment records for Cruzy Cruise Club membership fees.</description>
    <label>Membership Payment</label>
    <nameField>
        <displayFormat>MP-{0000}</displayFormat>
        <label>Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Membership Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>