cruzy-demo/force-app/main/default/objects/Membership_Payment__c/fields/Renewal_Year__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Year__c</fullName>
    <label>Renewal Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>